# Nova

./: .env.example  .gitignore  .golangci.yml  .markdownlintrc  .pre-commit-config.yaml  CASCADE.md  CASCADE.md.example  CLAUDE_TRANSCRIPT_ANALYSIS_INSTRUCTIONS.md  DIAGRAM_GENERATOR_IMPLEMENTATION.md  LICENSE  MERMAID_DIAGRAMS.md  Makefile  PROGRAM_NOVA_PLANNING.md  QUICKSTART.md  README.md  SERVICES.md  VERIFICATION_TOKEN_TRACKING.md  analyze_session.py  auto_update_workflow.py  batch_import.py  brainstorm.md  claude.md  db.py  example_mermaid_diagrams.py  go.mod  go.sum  ingest.py  package-lock.json  package.json  planning_auto_update.md  prompts.py  pyproject.toml  query_analyses.py  requirements.txt  test-spec.md  test_diagram_endpoint.py  test_diagram_generator.py  test_mermaid_diagrams.py  test_session_end_hook.py  test_session_end_hook_integration.py  (+1 more)
.beads/: issues.jsonl
.claude/: nova-add-a-hello-world-page-to-this-dashboard.json  nova-hello-world-page.json  settings.json
.thevillage/: supervisor.json  worker_assignments.json
agent_loop_server/: QA_REPORT.md  __init__.py  __main__.py  agent.py  events.py  server.py  test_agent_simple.py  test_e2e.py  test_events.py  test_tools_simple.py  test_voice_endpoint.py  test_voice_pipeline.py  test_voice_pipeline_unit.py  tools.py  voice_pipeline.py  ws_client.py
baml_client/: baml_source_map.go  client.py  functions_parse_stream.go  inlinedbaml.py  partial_types.py  type_builder.py  type_map.go  types.py
baml_src/: agent.baml  baml.config  clients.baml  diagrams.baml  functions.baml  generators.baml  types.baml
claude-trace-dashboard/: PLAYWRIGHT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+487 files in other folders)
