[project]
name = "program-nova"
version = "0.1.0"
description = "Program Nova - Execution Engine + Dashboard for hierarchical task execution"
readme = "program_nova/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Eric Magliarditi"}
]

dependencies = [
    "pytest>=7.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
    "baml-py>=0.50.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "weave>=0.52.25",
    "claude-agent-sdk>=0.1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["program_nova", "agent_loop_server"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["program_nova", "agent_loop_server"]

[project.scripts]
nova = "program_nova.cli:main"
